# ccswap

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: DESIGN.md
docs/adr/: 0001-account-profile-switching-model.md  0002-project-documentation-language.md  0003-runtime-secret-store-implementation.md
src/: active.rs  app.rs  claude.rs  fsutil.rs  hooks.rs  lib.rs  main.rs  paths.rs  profile.rs  secret.rs  vault.rs
