[package]
name = "ccswap"
version = "0.1.0"
edition = "2024"
description = "Account profile switcher for Claude Code"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
etcetera = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tempfile = "3"
